# cmake-packaging-example

./: README.md
main/: CMakeLists.txt  main.cpp
mylib/: CMakeLists.txt  mylib.cpp  mylib.h
